refactor: add more tests for cursors and make them work